--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.9.0",
     "express": "4.9.5",
-    "jade": "^1.7.0"
+    "extend": "^1.3.0",
+    "jade": "^1.7.0",
+    "redis": "^0.12.1"
   },
   "scripts": {
     "start": "node app.js"
